
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct proc_reader {int read_size; int * buffer; int buffer_size; } ;


 int EXIT_FAILURE ;
 int O_RDONLY ;
 int PROC_CHUNK_SIZE ;
 int close (int) ;
 int debug2 (char*,...) ;
 int exit (int ) ;
 int open (char const*,int ) ;
 int perror (char*) ;
 int proc_ensure_size (struct proc_reader*,int) ;
 int read (int,int *,int) ;

__attribute__((used)) static int proc_read(struct proc_reader* pr, const char *file) {
 debug2("proc_read: file: %s, pr->buffer_size: %d\n",
   file, pr->buffer_size);

 int fd = open(file, O_RDONLY);
 if (fd == -1) {
  perror("[-] proc_read: open()");
  exit(EXIT_FAILURE);
 }

 pr->read_size = 0;
 while (1) {
  proc_ensure_size(pr, pr->read_size + PROC_CHUNK_SIZE);
  int bytes_read = read(fd, &pr->buffer[pr->read_size],
     PROC_CHUNK_SIZE);
  if (bytes_read == -1) {
   perror("[-] read(proc)");
   exit(EXIT_FAILURE);
  }
  pr->read_size += bytes_read;
  if (bytes_read < PROC_CHUNK_SIZE)
   break;
 }

 close(fd);

 debug2("proc_read = %d\n", pr->read_size);
 return pr->read_size;
}
